refactor: 움직임 dto 적용